# data-structure

02_Reversing Linked List/: CMakeLists.txt  a.out  reverse_linklist.cpp  v2.cpp  v3.cpp
03_Pop sequence/: CMakeLists.txt  main.cpp
04_Tree isomorphism/: CMakeLists.txt  tree.cpp
